@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-05T01:20:30Z",
-  "count_outdated" : 2669,
-  "uniques_outdated" : 865,
+  "timestamp" : "2024-08-07T01:19:47Z",
+  "count_outdated" : 2670,
+  "uniques_outdated" : 866,
   "count" : 2696,
   "uniques" : 874,
   "views" : [
-    {
-      "timestamp": "2024-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-25T00:00:00Z",
       "count": 13,
