@@ -1,12 +1,7 @@
 {
-  "count": 27,
-  "uniques": 9,
+  "count": 26,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2024-07-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-25T00:00:00Z",
       "count": 13,
